# ldd

./: .gitignore  README.md  package.json
scripts/: create_charts.py  generate-test-data.mjs  generate_kpi_charts.py  main.ipynb  main.py  new.ipynb  new.json  new.parquet  pyproject.toml
src/lib/components/: mode-toggle.svelte
src/lib/components/app/: app-sidebar.svelte  chart-focus-modal.svelte  dashboard.svelte  file-picker.svelte  kpi-chart.svelte  kpi-group.svelte  settings-dialog.svelte  splash-screen.svelte  threshold-config.svelte  threshold-dialog.svelte
src/lib/components/qos/: add-kpi-dialog.svelte  dashboard.svelte  file-picker.svelte  group-config.svelte  group-dialog.svelte  kpi-chart.svelte  kpi-group.svelte  qos-sidebar.svelte
src/lib/components/rna/: rna-sidebar.svelte
src/lib/stores/: app-state.svelte.ts
src/lib/utils/: default-thresholds.ts  excel-parser.ts  new.ts
src/routes/: +layout.svelte  +page.svelte  layout.css
src/routes/api/proxy/: +server.ts
src/routes/api/reports/: +server.ts
src/routes/api/reports/generate-charts/: +server.ts
src/routes/api/reports/generate-image-charts/: +server.ts
src/routes/qos/: +layout.svelte  +page.svelte
src/routes/rna/: +layout.svelte  +page.svelte
static/: .~lock.test-data.xlsx#  test-data.xlsx
static/reports/: .gitkeep
