[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastexcel>=0.19.0",
    "ipykernel>=7.2.0",
    "openpyxl>=3.1.5",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "xlsxwriter>=3.2.0",
]
